--- a/public/index.ejs
+++ b/public/index.ejs
@@ -1,24 +1,260 @@
-<!doctype html>
-<html class="no-js" lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title><%= config.title %></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,500italic,700,700italic">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  </head>
-  <body>
-    <div id="container"></div>
-    <script src="<%= bundle %>"></script>
-    <%_ if (!debug && config.trackingID) { _%>
-    <script>
-      window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-      ga('create','<%= config.trackingID %>','auto');ga('send','pageview')
-    </script>
-    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
-    <%_ } _%>
-  </body>
+<html>
+<head>
+
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=Roboto');
+  </style>
+
+  <style>
+  /* local page styles */
+  html, html body {
+    background-color: #f2f9ff;
+    font-family: 'Roboto', sans-serif;
+  }
+
+  html h1 {
+    font-size: 26px;
+    margin-left: 10px;
+  }
+
+  html h2 {
+    font-size: 22px;
+    margin-left: 10px;
+  }
+
+  html h3 {
+    font-size: 14px;
+    margin-left: 10px;
+  }
+
+  html h4 {
+    font-size: 16px;
+  }
+
+  .example {
+    margin-top: 40px;
+  }
+
+  .progtrckr {
+    text-align: center;
+    padding-bottom: 16px;
+  }
+
+  .progtrckr li {
+    margin-bottom: 10px;
+  }
+
+  .val-err-tooltip {
+    background-color: red;
+    padding: 3px 5px 3px 10px;
+    font-size: 14px;
+    color: #fff;
+  }
+
+  .step {
+    background-color: #ccc;
+    min-height: 450px;
+    padding: 10px;
+  }
+
+  html .row, html .form-horizontal .form-group {
+    margin: 0;
+  }
+
+  .footer-buttons {
+    margin-top: 10px;
+  }
+
+  html .step3 label, html .step4 label {
+    font-size: 20px;
+    text-align: left;
+  }
+
+  html .form-horizontal .control-label {
+    text-align: left;
+  }
+
+  .review .txt {
+    font-size: 20px;
+    text-align: left;
+    margin: 0;
+    padding: 0;
+  }
+
+  html body .saving {
+    background-color: #5cb85c;
+    width: 90%;
+    padding: 5px;
+    font-size: 16px;
+  }
+
+  code {
+    position: relative;
+    left: 12px;
+    line-height: 25px;
+  }
+
+  .eg-jump-lnk {
+    margin-top: 50px;
+    font-style: italic;
+  }
+
+  .lib-version {
+    font-size: 12px;
+    background-color: rgba(255, 255, 0, 0.38);
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    padding: 5px;
+  }
+
+  html .content {
+    margin-left: 10px;
+  }
+
+  span.red {
+    color: #d9534f;
+  }
+
+  span.green {
+    color: #3c763d;
+  }
+
+  span.bold {
+    font-weight: bold;
+  }
+
+  html .hoc-alert {
+    margin-top: 20px;
+  }
+
+  html .form-block-holder {
+    margin-top: 20px !important;
+  }
+
+  /* overwrite the stepzilla styles */
+  html ol.progtrckr li.progtrckr-todo:before {
+    background-color: #f2f9ff;
+  }
+
+  ol.progtrckr {
+  list-style-type: none;
+  padding: 0;
+}
+
+ol.progtrckr li {
+  display: inline-block;
+  text-align: center;
+  line-height: 4.5rem;
+  cursor: pointer;
+}
+
+ol.progtrckr li span {
+  padding: 0 1.5rem;
+}
+
+@media (max-width: 650px) {
+  .progtrckr li span {
+    display: none;
+  }
+}
+.progtrckr em {
+  display: none;
+  font-weight: 700;
+  padding-left: 1rem;
+}
+
+@media (max-width: 650px) {
+  .progtrckr em {
+    display: inline;
+  }
+}
+
+ol.progtrckr li.progtrckr-todo {
+  color: silver;
+  border-bottom: 4px solid silver;
+}
+
+ol.progtrckr li.progtrckr-doing {
+  color: black;
+  border-bottom: 4px solid #CCCCCC;
+}
+
+ol.progtrckr li.progtrckr-done {
+  color: black;
+  border-bottom: 4px solid #5cb85c;
+}
+
+ol.progtrckr li:after {
+  content: "\00a0\00a0";
+}
+
+ol.progtrckr li:before {
+  position: relative;
+  bottom: -3.7rem;
+  float: left;
+  left: 50%;
+}
+
+ol.progtrckr li.progtrckr-todo:before {
+  content: "\039F";
+  color: silver;
+  background-color: white;
+  width: 1.2em;
+  line-height: 1.4em;
+}
+
+ol.progtrckr li.progtrckr-todo:hover:before {
+  color: #ff4500;
+}
+
+ol.progtrckr li.progtrckr-doing:before {
+  content: "\2022";
+  color: white;
+  background-color: #CCCCCC;
+  width: 1.2em;
+  line-height: 1.2em;
+  border-radius: 1.2em;
+}
+
+ol.progtrckr li.progtrckr-doing:hover:before {
+  color: #ff4500;
+}
+
+ol.progtrckr li.progtrckr-done:before {
+  content: "\2713";
+  color: white;
+  background-color: #5cb85c;
+  width: 1.2em;
+  line-height: 1.2em;
+  border-radius: 1.2em;
+}
+
+ol.progtrckr li.progtrckr-done:hover:before {
+  color: #333;
+}
+
+  </style>
+
+<!--   <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+ -->
+
+ <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+</head>
+<body>
+ <div id="mount"></div>
+
+<script src="<%= bundle %>"></script>
+
+<script type="text/javascript">
+  ContactWidget.init({
+    some: "config"
+  }); 
+</script>
+
+</body>
 </html>
